# advent_of_code

./: .gitignore
2024/day 1/: CMakeLists.txt
2024/day 1/src/: main.c  main.cpp
2024/day 2/src/: main.c
2024/day2/: CMakeLists.txt
2024/day2/src/: input.txt  main.cpp
2024/day3/: CMakeLists.txt
2024/day3/src/: main.cpp
2024/day4/: CMakeLists.txt
2024/day4/src/: input.txt  main.cpp
2024/day5/: CMakeLists.txt
2024/day5/src/: input.txt  main.cpp
2024/day6/src/: input.txt  main.cpp
2024/day7/src/: input.txt  main.cpp
